[package]
name = "wfhelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
libappindicator = "0.8.0"
gtk = "0.16"
wayland-backend = { version = "0.1.2", features = ["client_system"] }
wayland-client = "0.30.1"
wayland-protocols-plasma = { version = "0.1.0", features = ["client"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
dbus = "0.9.7"
wayland-protocols = {version = "0.30.1", features = ["client", "staging"]}

[profile.release]
opt-level = "s"
lto = true
strip = true

[features]
dialog = []
