[package]
name = "wfhelper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dbus = "0.9.7"
gtk = "0.18.1"
libappindicator = "0.9.0"
notify-rust = "4.10.0"
regex = "1.10.3"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["staging", "client"] }
wayland-protocols-plasma = { version = "0.2.0", features = ["client"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }

[profile.release]
lto = true
incremental = true
